<resources>
    <string name="app_name">Foxkiev</string>


    <!--system strings-->
    <string name="default_add_to_cart_product_count">1</string>

    <!--btn texts-->
    <string name="btn_text_sign_in">Sign in</string>
    <string name="btn_text_forgot_password">Forgot Your Password?</string>
    <string name="btn_name_reset_password">Reset My password</string>


    <!--menu-->
    <string name="menu_item_list">List</string>
    <string name="menu_item_grid">Grid</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_product_filter">Filter</string>
    <string name="menu_item_share_product">Share</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_shopping_cart">Cart</string>
    <string name="menu_item_user_profile">Profile</string>
    <string name="menu_item_clear_cart">Clear cart</string>
    <string name="menu_item_settings">Settings</string>


    <!--product-->
    <string name="product_message_new">New</string>
    <string name="product_message_stock">Stock</string>
    <string name="product_message_not_available">Out of stock</string>

    <!--messages-->
    <string name="error_check_internet_connection">Please check internet connection and try again</string>
    <string name="btn_name_try_again">Try again</string>
    <string name="btn_name_add_to_cart">Add to cart</string>
    <string name="btn_name_out_of_stock">Out of stock</string>
    <string name="message_cart_subtotal">Cart Subtotal :</string>
    <string name="btn_name_checkout">Go to checkout</string>
    <string name="btn_name_create_account">Create an account</string>
    <string name="btn_name_change_password">Change password</string>
    <string name="btn_name_remove_cart_item">REMOVE</string>

    <string name="btn_name_cancel">Cancel</string>
    <string name="btn_name_ok">Ok</string>
    <string name="btn_name_continue_shopping">Continue shopping</string>
    <string name="btn_name_chipping_address">SHIPPING ADDRESS</string>
    <string name="btn_name_place_order">Place order</string>
    <string name="btn_name_next">Next</string>
    <string name="btn_name_my_orders">My orders</string>
    <string name="btn_name_my_wish_list">My wish list</string>

    <string name="title_order_success">THANK YOU FOR YOUR PURCHASE!</string>
    <string name="message_order_success">We\'ll email you an order confirmation with details and tracking info.</string>
    <string name="title_order_number">Your order number is: </string>

    <string name="message_item">item</string>
    <string name="message_items">items</string>
    <string name="title_remove">Remove?</string>
    <string name="message_product_not_available">Not available</string>
    <string name="message_confirm_remove_cart_item">Do you really want to remove item?</string>
    <string name="message_no_internet_connection">Please check your internet connection and try again</string>
    <string name="message_product_sku">Sku:</string>
    <string name="message_product_details">DETAILS:</string>
    <string name="message_related_products">RELATED PRODUCTS:</string>
    <string name="title_shipping_address">Shipping address</string>
    
    <string name="title_sign_in">Sign In</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_my_account">My account</string>
    <string name="title_forgot_password">Forgot your password</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_change_password">Change password</string>
    <string name="message_forgot_password_help">Please enter your email address below to receive a password reset link.</string>
    <string name="title_settings">Settings</string>
    <string name="setting_language">Language</string>
    <string name="setting_currency">Currency</string>
    <string name="setting_log_out">LogOut</string>
    <string name="settings_edit_account">Edit account</string>
    <string name="settings_change_password">Change password</string>
    <string name="btn_name_en">English</string>
    <string name="btn_name_eur">EUR</string>
    <string name="btn_name_uah">UAH</string>
    <string name="btn_name_rus">Russian</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_orders">My Orders</string>
    <string name="message_only_registered_users_can_bye">Only registered users can make purchases!</string>
    
    <!--hints-->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="hint_input_quantity">Please input quantity</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_warehouse">Warehouse</string>
    <string name="hint_phone_number">Phone Number </string>

    <string name="title_default_country">Ukraine</string>
    <string name="title_shipping_methods">Shipping methods</string>
    <string name="title_payment_methods">Payment methods</string>

    <string name="message_dialog_enter_quantity">Enter Quantity</string>
    <string name="message_account_created">You must confirm your account. Please check your email for the confirmation link.</string>
    <string name="message_password_changed">Password changed</string>

    <string-array name="cart_product_count_variants">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>More</item>
    </string-array>

    <string name="empty_state_cart">You have no items in your shopping cart.</string>
    <string name="empty_state_notifications">No notifications yet!</string>
    <string name="empty_state_search_products">Your search returned no results!</string>

    <!--errors-->
    <string name="error_enter_valid_email">Please enter a valid email address (Ex: johndoe@domain.com).</string>
    <string name="error_required_field">This is a required field.</string>
    <string name="error_enter_this_same_value">Please enter the same value again.</string>
    <string name="error_not_valid_password">Minimum length of this field must be equal or greater than 8 symbols. Leading and trailing spaces will be ignored.</string>
    <string name="title_filter">Filter</string>


    <string name="hint_sort_by">Sort By</string>
    <string name="title_sort_by_position">Position</string>
    <string name="title_sort_by_name">Product Name</string>
    <string name="title_sort_by_sku">SKU</string>
    <string name="title_sort_by_price">Price</string>
    <string name="title_sort_by_size">Size</string>
    <string name="title_sort_by_stock_status">Custom Stock Status</string>
    <string name="hint_search_products">Search your products…</string>

    <string-array name="filter_sort_by_items">
        <item>Position</item>
        <item>Product Name</item>
        <item>SKU</item>
        <item>Price</item>
        <item>Size</item>
        <item>Custom Stock Status</item>
    </string-array>

</resources>
