<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_language"
            style="@style/TextStyle.SubTitle"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_color"/>
        <RadioGroup
            android:id="@+id/rgLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbEnglishLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_name_en"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbDefaultLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_name_rus"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/llAccountSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/setting_currency"
                style="@style/TextStyle.SubTitle"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider_color"/>
            <RadioGroup
                android:id="@+id/rgCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbCurrencyEUR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_eur"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbCurrencyUAH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_uah"/>
            </RadioGroup>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnEditAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/settings_edit_account"
                android:background="?android:attr/selectableItemBackground"
                style="@style/TextStyle.Title.Small" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/settings_change_password"
                android:background="?android:attr/selectableItemBackground"
                style="@style/TextStyle.Title.Small" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider_color"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/setting_log_out"
                android:background="?android:attr/selectableItemBackground"
                style="@style/TextStyle.Title" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>