<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <com.foxkiev.app.ui.custom_views.EditTextWrapper
            android:id="@+id/tilFirstNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etFirstName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:textColor="@color/colorAccent" />
        </com.foxkiev.app.ui.custom_views.EditTextWrapper>
        <com.foxkiev.app.ui.custom_views.EditTextWrapper
            android:id="@+id/tilLastNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etLastName"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                style="@style/EditText"
                android:drawablePadding="8dp"
                android:hint="@string/hint_last_name"/>
        </com.foxkiev.app.ui.custom_views.EditTextWrapper>
        <com.foxkiev.app.ui.custom_views.EditTextWrapper
            android:id="@+id/tilEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                style="@style/EditText"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email"/>
        </com.foxkiev.app.ui.custom_views.EditTextWrapper>
        <com.foxkiev.app.ui.custom_views.EditTextWrapper
            android:id="@+id/tilPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                style="@style/EditText"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password"/>
        </com.foxkiev.app.ui.custom_views.EditTextWrapper>

        <com.foxkiev.app.ui.custom_views.EditTextWrapper
            android:id="@+id/tilConfirmPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                style="@style/EditText"
                android:drawablePadding="8dp"
                android:hint="@string/hint_confirm_password"/>
        </com.foxkiev.app.ui.custom_views.EditTextWrapper>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:text="@string/btn_name_create_account"
            style="@style/Button.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>