<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="#ff669900">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivConfirmDialogIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_edit"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Title"
            android:text="@string/message_dialog_enter_quantity"/>

        <com.foxkiev.app.ui.custom_views.EditTextWrapper
            android:id="@+id/etCountWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/hint_input_quantity"/>
        </com.foxkiev.app.ui.custom_views.EditTextWrapper>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_name_cancel"
                android:layout_weight="1"
                style="@style/Button.GreenCorner"
                android:layout_marginRight="4dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_name_ok"
                android:layout_weight="1"
                style="@style/Button.Green"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>