<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="@android:color/holo_green_light">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            tools:src="@drawable/ic_success"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Title"
            android:text="@string/title_order_success"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_order_number"
                android:layout_marginBottom="8dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                tools:text="123456789"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_order_success"
            android:layout_marginBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_color"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnContinueShopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_name_continue_shopping"
            android:layout_weight="1"
            style="@style/Button.Green"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>

</LinearLayout>