<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_forgot_password_help"/>
            <com.foxkiev.app.ui.custom_views.EditTextWrapper
                android:id="@+id/tilEmailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/hint_email"
                    style="@style/EditText"
                    android:drawablePadding="8dp"
                    tools:text="zapashok0@gmail.com" />
            </com.foxkiev.app.ui.custom_views.EditTextWrapper>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnResetPassword"
                android:text="@string/btn_name_reset_password"
                style="@style/Button.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </FrameLayout>
</ScrollView>
