<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="16dp">
                        <com.foxkiev.app.ui.custom_views.EditTextWrapper
                            android:id="@+id/tilEmailWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/etEmail"
                                    android:inputType="textEmailAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorAccent"
                                    android:hint="@string/hint_email"
                                    style="@style/EditText"
                                    android:drawablePadding="8dp"
                                    tools:text="zapashok0@gmail.com"/>
                        </com.foxkiev.app.ui.custom_views.EditTextWrapper>
                        <com.foxkiev.app.ui.custom_views.EditTextWrapper
                            android:id="@+id/tilPasswordWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true">
                                <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/etPassword"
                                    android:inputType="textPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorAccent"
                                    style="@style/EditText"
                                    android:hint="@string/hint_password"
                                    android:drawablePadding="8dp"/>
                        </com.foxkiev.app.ui.custom_views.EditTextWrapper>
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btnSignIn"
                            android:text="@string/btn_text_sign_in"
                            style="@style/Button.Green"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/btnForgotPassword"
                            android:text="@string/btn_text_forgot_password"
                            android:padding="4dp"
                            android:textAlignment="center"
                            android:background="?android:attr/selectableItemBackground"
                            android:textColor="@android:color/black"
                            android:layout_margin="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                </LinearLayout>

        </FrameLayout>
</ScrollView>
